--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,5 +18,13 @@
         <button type="submit">Login</button>
     </div>
 </form>
+<!–– fragments/footer.html ––>
+<div th:fragment="footer">
+    <footer>
+        <p>&copy; 2025. Todos os direitos reservados.</p>
+    </footer>
+</div>
 </body>
+
+
 </html>
