--- a/src/main/resources/templates/motos/form.html
+++ b/src/main/resources/templates/motos/form.html
@@ -45,6 +45,11 @@
 </form>
 
 <a th:href="@{/motos}">Voltar</a>
-
+<!–– fragments/footer.html ––>
+<div th:fragment="footer">
+    <footer>
+        <p>&copy; 2025. Todos os direitos reservados.</p>
+    </footer>
+</div>
 </body>
 </html>
