--- a/src/main/resources/templates/motos/list.html
+++ b/src/main/resources/templates/motos/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Lista de Motos</title>
@@ -39,15 +39,22 @@
         <td th:text="${moto.latitude}"></td>
         <td th:text="${moto.longitude}"></td>
         <td>
-            <a th:href="@{'/motos/edit/' + ${moto.id}}">Editar</a> |
-            <a th:href="@{'/motos/delete/' + ${moto.id}}"
-               onclick="return confirm('Deseja realmente deletar esta moto?');">Deletar</a>
+            <span sec:authorize="hasRole('ROLE_ADMIN')">
+                <a th:href="@{'/motos/edit/' + ${moto.id}}">Editar</a> |
+                <a th:href="@{'/motos/delete/' + ${moto.id}}"
+           onclick="return confirm('Deseja realmente deletar esta moto?');">Deletar</a>
+            </span>
         </td>
     </tr>
     </tbody>
 </table>
 
 <a th:href="@{/logout}">Sair</a>
-
+<!–– fragments/footer.html ––>
+<div th:fragment="footer">
+    <footer>
+        <p>&copy; 2025. Todos os direitos reservados.</p>
+    </footer>
+</div>
 </body>
 </html>
