revisando e melhorando o projeto /templates e adicionando exceptions

--- a/src/main/resources/templates/motos/form.html
+++ b/src/main/resources/templates/motos/form.html
@@ -44,7 +44,7 @@
     <button type="submit">Salvar</button>
 </form>
 
-<a th:href="@{/motos}">Voltar</a>
+<a th:href="@{/motos/listagem}">Voltar</a>
 <!–– fragments/footer.html ––>
 <div th:fragment="footer">
     <footer>
